# BCIScriptC

./: '  .gitignore  BCIScriptC.cabal  CHANGELOG.md  Cargo.toml  README.md  StimulusPresentation.bcis  bciscript_elifs  bciscriptc  hie.yaml
app/: Builtins.hs  Errors.hs  Generate.hs  Main.hs  Parse.hs  Types.hs  Verify.hs
src/: ast.rs  builtins.rs  err.rs  generate.rs  lex.rs  main.rs  parse.rs  verify.rs
src/tests/: mod.rs  test_lex.rs
src/tests/lex/: mod.rs  test_lex_basic_tokens.rs  test_lex_compound.rs
