cabal-version:      2.4
name:               BCIScriptC
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:


-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ty Butler
maintainer:         tytbu@tytbutler.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable BCIScriptC
    main-is:          Main.hs

    ld-options: 
        -fPIC

    ghc-options:
       -dynamic 
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.0.0,
        parsec ^>=3.1.15.1,
        mtl ^>=2.2.2,
        ghc ^>=9.2.2
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
        Types, Verify, Parse, Errors, Builtins, Generate
